// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<NewsletterSubscribe lang="en" /> > should render 1`] = `
<div
  class="ml-form-embedContainer ml-subscribe-form ml-subscribe-form-38366393"
  data-astro-cid-h4grly7g=""
  id="mlb2-38366393"
  style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
>
   
  <div
    class="ml-form-align-center"
    data-astro-cid-h4grly7g=""
    style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
  >
     
    <div
      class="ml-form-embedWrapper embedForm"
      data-astro-cid-h4grly7g=""
      style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
    >
       
      <div
        class="ml-form-embedBody ml-form-embedBodyHorizontal row-form"
        data-astro-cid-h4grly7g=""
        style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
      >
         
        <div
          class="ml-form-embedContent"
          data-astro-cid-h4grly7g=""
          style=" ; --colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
        >
           
          <h2
            data-astro-cid-k2kdrolm=""
            style="--h2FontFamily: "Krana Fat", Trebuchet MS;--h2FontSize: 2.25rem;--h2FontWeight: 1000;--h2LineHeight: 2.5rem;"
          >
             Newsletter 
          </h2>
           
          <p
            data-astro-cid-ho6gvodc=""
            style="grid-column-start:3"
          >
             Subscribe to receive digested explanations and analysis of the latest technologies and their impact on society. Straight to your inbox. 
          </p>
           
        </div>
         
        <form
          action="https://assets.mailerlite.com/jsonp/2182645/forms/181740004170532163/subscribe"
          class="ml-block-form"
          data-astro-cid-h4grly7g=""
          data-code=""
          method="post"
          style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
          target="_blank"
        >
           
          <div
            class="ml-form-formContent horozintalForm"
            data-astro-cid-h4grly7g=""
            style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
          >
             
            <div
              class="ml-form-horizontalRow"
              data-astro-cid-h4grly7g=""
              style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
            >
               
              <div
                class="ml-input-horizontal"
                data-astro-cid-h4grly7g=""
                style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
              >
                 
                <div
                  class="horizontal-fields"
                  data-astro-cid-h4grly7g=""
                  style="width: 100%;; --colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
                >
                   
                  <div
                    class="ml-field-group ml-field-email ml-validate-email ml-validate-required"
                    data-astro-cid-h4grly7g=""
                    style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
                  >
                     
                    <!-- input -->
                     
                    <label
                      class="sr-only"
                      data-astro-cid-h4grly7g=""
                      for="newsletter-email"
                      style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
                    >
                      Email
                    </label>
                     
                    <input
                      autocomplete="email"
                      class="form-control"
                      data-astro-cid-h4grly7g=""
                      data-inputmask=""
                      id="newsletter-email"
                      name="fields[email]"
                      placeholder="Email"
                      style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
                      type="email"
                    />
                     
                    <!-- /input -->
                     
                  </div>
                   
                </div>
                 
              </div>
               
              <div
                class="ml-button-horizontal primary"
                data-astro-cid-h4grly7g=""
                style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
              >
                 
                <button
                  class="primary"
                  data-astro-cid-h4grly7g=""
                  style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
                  type="submit"
                >
                  Subscribe
                </button>
                 
                <button
                  class="loading"
                  data-astro-cid-h4grly7g=""
                  disabled="disabled"
                  style="display: none;; --colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
                  type="button"
                >
                   
                  <div
                    class="ml-form-embedSubmitLoad"
                    data-astro-cid-h4grly7g=""
                    style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
                  />
                   
                  <span
                    class="sr-only"
                    data-astro-cid-h4grly7g=""
                    style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
                  >
                    Loading...
                  </span>
                   
                </button>
                 
              </div>
               
            </div>
             
          </div>
           
          <!-- Privacy policy -->
           
          <div
            class="ml-form-embedPermissions"
            data-astro-cid-h4grly7g=""
            style="; --colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
          >
             
            <div
              class="ml-form-embedPermissionsContent horizontal privacy-policy"
              data-astro-cid-h4grly7g=""
              style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
            >
               
              <p
                data-astro-cid-ho6gvodc=""
                style="grid-column-start:3"
              >
                 You can unsubscribe at any time. For more information, read our 
                <a
                  data-astro-cid-mbqdmgin=""
                  href="/en/privacy-policy/"
                  rel=""
                  style="--colorsDarkMoss: rgb(72, 75, 0);--sizes0125: 0.125rem;"
                >
                   privacy policy 
                </a>
                  
              </p>
               
            </div>
             
          </div>
           
          <!-- /Privacy policy -->
           
          <input
            data-astro-cid-h4grly7g=""
            name="ml-submit"
            style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
            type="hidden"
            value="1"
          />
           
          <div
            aria-hidden="true"
            class="ml-mobileButton-horizontal"
            data-astro-cid-h4grly7g=""
            style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
          >
             
            <button
              class="primary"
              data-astro-cid-h4grly7g=""
              style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
              tabindex="-1"
              type="submit"
            >
              Subscribe
            </button>
             
            <button
              class="loading"
              data-astro-cid-h4grly7g=""
              disabled="disabled"
              style="display: none;; --colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
              tabindex="-1"
              type="button"
            >
               
              <div
                class="ml-form-embedSubmitLoad"
                data-astro-cid-h4grly7g=""
                style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
              />
               
              <span
                class="sr-only"
                data-astro-cid-h4grly7g=""
                style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
              >
                Loading...
              </span>
               
            </button>
             
          </div>
           
          <input
            data-astro-cid-h4grly7g=""
            name="anticsrf"
            style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
            type="hidden"
            value="true"
          />
           
        </form>
         
      </div>
       
      <div
        class="ml-form-successBody row-success"
        data-astro-cid-h4grly7g=""
        style="display: none; --colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
      >
         
        <div
          class="ml-form-successContent"
          data-astro-cid-h4grly7g=""
          style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
        >
           
          <h2
            data-astro-cid-k2kdrolm=""
            style="--h2FontFamily: "Krana Fat", Trebuchet MS;--h2FontSize: 2.25rem;--h2FontWeight: 1000;--h2LineHeight: 2.5rem;"
          >
             Thank you! 
          </h2>
           
          <p
            data-astro-cid-ho6gvodc=""
            style="grid-column-start:3"
          >
             You have successfully subscribed 
          </p>
           
        </div>
         
      </div>
       
    </div>
     
  </div>
   
</div>
`;

exports[`<NewsletterSubscribe lang="fi" /> > should render 1`] = `
<div
  class="ml-form-embedContainer ml-subscribe-form ml-subscribe-form-38347721"
  data-astro-cid-h4grly7g=""
  id="mlb2-38347721"
  style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
>
   
  <div
    class="ml-form-align-center"
    data-astro-cid-h4grly7g=""
    style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
  >
     
    <div
      class="ml-form-embedWrapper embedForm"
      data-astro-cid-h4grly7g=""
      style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
    >
       
      <div
        class="ml-form-embedBody ml-form-embedBodyHorizontal row-form"
        data-astro-cid-h4grly7g=""
        style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
      >
         
        <div
          class="ml-form-embedContent"
          data-astro-cid-h4grly7g=""
          style=" ; --colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
        >
           
          <h2
            data-astro-cid-k2kdrolm=""
            style="--h2FontFamily: "Krana Fat", Trebuchet MS;--h2FontSize: 2.25rem;--h2FontWeight: 1000;--h2LineHeight: 2.5rem;"
          >
             Uutiskirje 
          </h2>
           
          <p
            data-astro-cid-ho6gvodc=""
            style="grid-column-start:3"
          >
             Tilaa ja saat pureskeltuja selityksiä ja analyysejä tuoreimmista teknologioista ja niiden vaikutuksista yhteiskuntaan. Suoraan sähköpostiisi. 
          </p>
           
        </div>
         
        <form
          action="https://assets.mailerlite.com/jsonp/2182645/forms/181706420545128273/subscribe"
          class="ml-block-form"
          data-astro-cid-h4grly7g=""
          data-code=""
          method="post"
          style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
          target="_blank"
        >
           
          <div
            class="ml-form-formContent horozintalForm"
            data-astro-cid-h4grly7g=""
            style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
          >
             
            <div
              class="ml-form-horizontalRow"
              data-astro-cid-h4grly7g=""
              style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
            >
               
              <div
                class="ml-input-horizontal"
                data-astro-cid-h4grly7g=""
                style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
              >
                 
                <div
                  class="horizontal-fields"
                  data-astro-cid-h4grly7g=""
                  style="width: 100%;; --colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
                >
                   
                  <div
                    class="ml-field-group ml-field-email ml-validate-email ml-validate-required"
                    data-astro-cid-h4grly7g=""
                    style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
                  >
                     
                    <!-- input -->
                     
                    <label
                      class="sr-only"
                      data-astro-cid-h4grly7g=""
                      for="newsletter-email"
                      style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
                    >
                      Sähköposti
                    </label>
                     
                    <input
                      autocomplete="email"
                      class="form-control"
                      data-astro-cid-h4grly7g=""
                      data-inputmask=""
                      id="newsletter-email"
                      name="fields[email]"
                      placeholder="Sähköposti"
                      style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
                      type="email"
                    />
                     
                    <!-- /input -->
                     
                  </div>
                   
                </div>
                 
              </div>
               
              <div
                class="ml-button-horizontal primary"
                data-astro-cid-h4grly7g=""
                style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
              >
                 
                <button
                  class="primary"
                  data-astro-cid-h4grly7g=""
                  style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
                  type="submit"
                >
                  Tilaa
                </button>
                 
                <button
                  class="loading"
                  data-astro-cid-h4grly7g=""
                  disabled="disabled"
                  style="display: none;; --colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
                  type="button"
                >
                   
                  <div
                    class="ml-form-embedSubmitLoad"
                    data-astro-cid-h4grly7g=""
                    style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
                  />
                   
                  <span
                    class="sr-only"
                    data-astro-cid-h4grly7g=""
                    style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
                  >
                    Lataa...
                  </span>
                   
                </button>
                 
              </div>
               
            </div>
             
          </div>
           
          <!-- Privacy policy -->
           
          <div
            class="ml-form-embedPermissions"
            data-astro-cid-h4grly7g=""
            style="; --colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
          >
             
            <div
              class="ml-form-embedPermissionsContent horizontal privacy-policy"
              data-astro-cid-h4grly7g=""
              style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
            >
               
              <p
                data-astro-cid-ho6gvodc=""
                style="grid-column-start:3"
              >
                 Voit perua uutiskirjeen koska tahansa. Lisätietoja varten lue 
                <a
                  data-astro-cid-mbqdmgin=""
                  href="/fi/privacy-policy/"
                  rel=""
                  style="--colorsDarkMoss: rgb(72, 75, 0);--sizes0125: 0.125rem;"
                >
                   tietosuojaselosteemme 
                </a>
                 . 
              </p>
               
            </div>
             
          </div>
           
          <!-- /Privacy policy -->
           
          <input
            data-astro-cid-h4grly7g=""
            name="ml-submit"
            style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
            type="hidden"
            value="1"
          />
           
          <div
            aria-hidden="true"
            class="ml-mobileButton-horizontal"
            data-astro-cid-h4grly7g=""
            style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
          >
             
            <button
              class="primary"
              data-astro-cid-h4grly7g=""
              style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
              tabindex="-1"
              type="submit"
            >
              Tilaa
            </button>
             
            <button
              class="loading"
              data-astro-cid-h4grly7g=""
              disabled="disabled"
              style="display: none;; --colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
              tabindex="-1"
              type="button"
            >
               
              <div
                class="ml-form-embedSubmitLoad"
                data-astro-cid-h4grly7g=""
                style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
              />
               
              <span
                class="sr-only"
                data-astro-cid-h4grly7g=""
                style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
              >
                Lataa...
              </span>
               
            </button>
             
          </div>
           
          <input
            data-astro-cid-h4grly7g=""
            name="anticsrf"
            style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
            type="hidden"
            value="true"
          />
           
        </form>
         
      </div>
       
      <div
        class="ml-form-successBody row-success"
        data-astro-cid-h4grly7g=""
        style="display: none; --colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
      >
         
        <div
          class="ml-form-successContent"
          data-astro-cid-h4grly7g=""
          style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
        >
           
          <h2
            data-astro-cid-k2kdrolm=""
            style="--h2FontFamily: "Krana Fat", Trebuchet MS;--h2FontSize: 2.25rem;--h2FontWeight: 1000;--h2LineHeight: 2.5rem;"
          >
             Kiitos! 
          </h2>
           
          <p
            data-astro-cid-ho6gvodc=""
            style="grid-column-start:3"
          >
             Uutiskirje tilattu onnistuneesti 
          </p>
           
        </div>
         
      </div>
       
    </div>
     
  </div>
   
</div>
`;

exports[`<NewsletterSubscribe lang="sv" /> > should render 1`] = `
<div
  class="ml-form-embedContainer ml-subscribe-form ml-subscribe-form-38379286"
  data-astro-cid-h4grly7g=""
  id="mlb2-38379286"
  style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
>
   
  <div
    class="ml-form-align-center"
    data-astro-cid-h4grly7g=""
    style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
  >
     
    <div
      class="ml-form-embedWrapper embedForm"
      data-astro-cid-h4grly7g=""
      style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
    >
       
      <div
        class="ml-form-embedBody ml-form-embedBodyHorizontal row-form"
        data-astro-cid-h4grly7g=""
        style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
      >
         
        <div
          class="ml-form-embedContent"
          data-astro-cid-h4grly7g=""
          style=" ; --colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
        >
           
          <h2
            data-astro-cid-k2kdrolm=""
            style="--h2FontFamily: "Krana Fat", Trebuchet MS;--h2FontSize: 2.25rem;--h2FontWeight: 1000;--h2LineHeight: 2.5rem;"
          >
             Nyhetsbrev 
          </h2>
           
          <p
            data-astro-cid-ho6gvodc=""
            style="grid-column-start:3"
          >
             Prenumerera och få genomarbetade förklaringar och analyser av de senaste teknologierna och deras påverkan på samhället. Direkt till din inkorg. 
          </p>
           
        </div>
         
        <form
          action="https://assets.mailerlite.com/jsonp/2182645/forms/181754147902588391/subscribe"
          class="ml-block-form"
          data-astro-cid-h4grly7g=""
          data-code=""
          method="post"
          style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
          target="_blank"
        >
           
          <div
            class="ml-form-formContent horozintalForm"
            data-astro-cid-h4grly7g=""
            style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
          >
             
            <div
              class="ml-form-horizontalRow"
              data-astro-cid-h4grly7g=""
              style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
            >
               
              <div
                class="ml-input-horizontal"
                data-astro-cid-h4grly7g=""
                style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
              >
                 
                <div
                  class="horizontal-fields"
                  data-astro-cid-h4grly7g=""
                  style="width: 100%;; --colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
                >
                   
                  <div
                    class="ml-field-group ml-field-email ml-validate-email ml-validate-required"
                    data-astro-cid-h4grly7g=""
                    style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
                  >
                     
                    <!-- input -->
                     
                    <label
                      class="sr-only"
                      data-astro-cid-h4grly7g=""
                      for="newsletter-email"
                      style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
                    >
                      E-post
                    </label>
                     
                    <input
                      autocomplete="email"
                      class="form-control"
                      data-astro-cid-h4grly7g=""
                      data-inputmask=""
                      id="newsletter-email"
                      name="fields[email]"
                      placeholder="E-post"
                      style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
                      type="email"
                    />
                     
                    <!-- /input -->
                     
                  </div>
                   
                </div>
                 
              </div>
               
              <div
                class="ml-button-horizontal primary"
                data-astro-cid-h4grly7g=""
                style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
              >
                 
                <button
                  class="primary"
                  data-astro-cid-h4grly7g=""
                  style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
                  type="submit"
                >
                  Prenumerera
                </button>
                 
                <button
                  class="loading"
                  data-astro-cid-h4grly7g=""
                  disabled="disabled"
                  style="display: none;; --colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
                  type="button"
                >
                   
                  <div
                    class="ml-form-embedSubmitLoad"
                    data-astro-cid-h4grly7g=""
                    style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
                  />
                   
                  <span
                    class="sr-only"
                    data-astro-cid-h4grly7g=""
                    style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
                  >
                    Laddar...
                  </span>
                   
                </button>
                 
              </div>
               
            </div>
             
          </div>
           
          <!-- Privacy policy -->
           
          <div
            class="ml-form-embedPermissions"
            data-astro-cid-h4grly7g=""
            style="; --colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
          >
             
            <div
              class="ml-form-embedPermissionsContent horizontal privacy-policy"
              data-astro-cid-h4grly7g=""
              style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
            >
               
              <p
                data-astro-cid-ho6gvodc=""
                style="grid-column-start:3"
              >
                 Du kan avsluta prenumerationen när som helst. För mer information, läs vår 
                <a
                  data-astro-cid-mbqdmgin=""
                  href="/sv/privacy-policy/"
                  rel=""
                  style="--colorsDarkMoss: rgb(72, 75, 0);--sizes0125: 0.125rem;"
                >
                   integritetspolicy 
                </a>
                 . 
              </p>
               
            </div>
             
          </div>
           
          <!-- /Privacy policy -->
           
          <input
            data-astro-cid-h4grly7g=""
            name="ml-submit"
            style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
            type="hidden"
            value="1"
          />
           
          <div
            aria-hidden="true"
            class="ml-mobileButton-horizontal"
            data-astro-cid-h4grly7g=""
            style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
          >
             
            <button
              class="primary"
              data-astro-cid-h4grly7g=""
              style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
              tabindex="-1"
              type="submit"
            >
              Prenumerera
            </button>
             
            <button
              class="loading"
              data-astro-cid-h4grly7g=""
              disabled="disabled"
              style="display: none;; --colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
              tabindex="-1"
              type="button"
            >
               
              <div
                class="ml-form-embedSubmitLoad"
                data-astro-cid-h4grly7g=""
                style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
              />
               
              <span
                class="sr-only"
                data-astro-cid-h4grly7g=""
                style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
              >
                Laddar...
              </span>
               
            </button>
             
          </div>
           
          <input
            data-astro-cid-h4grly7g=""
            name="anticsrf"
            style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
            type="hidden"
            value="true"
          />
           
        </form>
         
      </div>
       
      <div
        class="ml-form-successBody row-success"
        data-astro-cid-h4grly7g=""
        style="display: none; --colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
      >
         
        <div
          class="ml-form-successContent"
          data-astro-cid-h4grly7g=""
          style="--colorsBlack: rgb(0, 0, 0);--colorsEvening: rgb(0, 98, 114);--colorsEvening70: rgba(0, 98, 114, 0.7);--colorsMoss: rgb(90, 94, 0);--colorsWhite: rgb(255, 255, 255);--fontFamiliesSans: "IBM Plex Sans", Trebuchet MS;--sizes0875: 0.875rem;--sizes1: 1rem;--sizes125: 1.25rem;"
        >
           
          <h2
            data-astro-cid-k2kdrolm=""
            style="--h2FontFamily: "Krana Fat", Trebuchet MS;--h2FontSize: 2.25rem;--h2FontWeight: 1000;--h2LineHeight: 2.5rem;"
          >
             Tack så mycket! 
          </h2>
           
          <p
            data-astro-cid-ho6gvodc=""
            style="grid-column-start:3"
          >
             Du har prenumererat framgångsrikt 
          </p>
           
        </div>
         
      </div>
       
    </div>
     
  </div>
   
</div>
`;
